# smartcab-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  dumb.xlsx  pyproject.toml
.github/workflows/: lint_and_types.yml
smartcab/: __init__.py  __main__.py  config.py  keyboards.py  message_text.py  user_mem.py
smartcab/handlers/: __init__.py  admins.py  devices_button.py  hub_password.py  load_schedule.py  menu.py  schedule.py  start.py  upload_statistics.py  webcam.py
smartcab_bot/: config.py  run.py
